--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "@fortawesome/free-solid-svg-icons": "^7.0.0",
         "@fortawesome/react-fontawesome": "^0.2.3",
         "@tailwindcss/vite": "^4.1.11",
+        "lodash": "^4.17.21",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0",
+        "react-dom": "^19.1.1",
+        "react-router-dom": "^7.8.2",
         "tailwindcss": "^4.1.11"
     },
     "devDependencies": {
