--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@fortawesome/react-fontawesome": "^0.2.3",
         "@tailwindcss/vite": "^4.1.11",
         "lodash": "^4.17.21",
+        "postcss": "^8.5.6",
         "react": "^19.1.0",
         "react-dom": "^19.1.1",
         "react-hook-form": "^7.62.0",
