--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
         "@fortawesome/free-regular-svg-icons": "^7.0.0",
         "@fortawesome/free-solid-svg-icons": "^7.0.0",
         "@fortawesome/react-fontawesome": "^0.2.3",
+        "@tailwindcss/postcss": "^4.1.13",
         "@tailwindcss/vite": "^4.1.11",
         "lodash": "^4.17.21",
-        "postcss": "^8.5.6",
         "react": "^19.1.0",
         "react-dom": "^19.1.1",
         "react-hook-form": "^7.62.0",
@@ -30,6 +30,7 @@
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.6.0",
+        "autoprefixer": "^10.4.21",
         "eslint": "^9.33.0",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.2.0",
